src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <description>The Society Area to which the user is allocated (if any).</description>
        <inlineHelpText>Must match Name from corresponding Internal Organisation.</inlineHelpText>
        <label>Area</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Central West Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Anglia and Central Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North &amp; East Northern Ireland Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Wales Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South &amp; West Northern Ireland Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Wales Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole Wales Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire Area</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IgnoreValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System Admins need to check this value on their user record before using DataLoader or Deploying code.</description>
        <label>IgnoreValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <description>The Society Locality to which the user is assigned (if any).</description>
        <inlineHelpText>Must match the Name of the corresponding Internal Organisation.</inlineHelpText>
        <label>Locality</label>
        <picklist>
            <controllingField>Area__c</controllingField>
            <picklistValues>
                <fullName>Abertawe Bro Morgannwg Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon, Gloucestershire &amp; Wiltshire Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedfordshire &amp; Luton Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berkshire, Buckinghamshire, Oxfordshire Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridgeshire &amp; Peterborough Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiff and the Vale Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheshire &amp; St Helens Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumbria Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cwm Taff Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darlington &amp; Teesside Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derbyshire Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devon, Cornwall &amp; Isles of Scilly Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dorset &amp; Somerset Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durham Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Riding &amp; Humber Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essex Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Manchester Central &amp; West Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Manchester Central South and East Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gwent Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hampshire, Isle of Wight and the Channel Islands Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herefordshire &amp; Worcestershire Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hertfordshire Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent &amp; Medway Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lancashire Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicestershire Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincolnshire Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merseyside &amp; Isle of Man Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midlands Central Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norfolk Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North &amp; East Northern Ireland Locality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nonprofit_Template_Version__c</fullName>
        <label>Nonprofit Template Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The Society Region to which the user is allocated.</description>
        <inlineHelpText>Must match the Name of the corresponding Internal Organisation.</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Region</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sys_Admin_Notes__c</fullName>
        <description>Add any notes as to why changes have been made here</description>
        <label>Sys Admin Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trainer_for_Alzheimer_s_Trading_Ltd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please check this if the user is used for Training for Education &amp; Development or in that department</inlineHelpText>
        <label>Trainer for Alzheimer&apos;s Trading Ltd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Worker_Type__c</fullName>
        <description>Specifies whether the user is a member of staff or a volunteer.</description>
        <label>Worker Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ezca__ezcaSettings__c</fullName>
        <label>ezcaSettings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Volunteers_Befriending_and_Care</fullName>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Worker_Type__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>CRS - One App User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Volunteers (Befriending and Care)</label>
        <sharedTo>
            <group>All_CRS_Users</group>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MARKETING_USER</columns>
        <columns>OFFLINE_USER</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Alzheimers_Trading_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>SFCONTENT_USER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Trading</value>
        </filters>
        <label>Alzheimers Trading Users</label>
    </listViews>
    <listViews>
        <fullName>BDC_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>BDC</value>
        </filters>
        <label>BDC Users</label>
    </listViews>
    <listViews>
        <fullName>Config_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>Config</value>
        </filters>
        <label>Config Users</label>
        <sharedTo>
            <group>SystemAdministrators</group>
            <role>ITAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DA_Logons</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>startsWith</operation>
            <value>DA</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DA Logons</label>
    </listViews>
    <listViews>
        <fullName>Darlington_New_Users_for_Derbyshire</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>Locality__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>&lt;No</value>
        </filters>
        <filters>
            <field>PASSWORD_EXPIRES</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Locality__c</field>
            <operation>startsWith</operation>
            <value>Darlington</value>
        </filters>
        <label>New Users for Locality Darlington</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Durham_New_Users_for_Derbyshire</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>Locality__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>&lt;No</value>
        </filters>
        <filters>
            <field>PASSWORD_EXPIRES</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Locality__c</field>
            <operation>startsWith</operation>
            <value>Durham</value>
        </filters>
        <label>New Users for Locality Durham</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Admin_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>IT Administrator</value>
        </filters>
        <label>IT Admin Users</label>
        <sharedTo>
            <group>SystemAdministrators</group>
            <role>ITAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mike_New_Users_for_External_Affairs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>Locality__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>PASSWORD_EXPIRES</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>&lt;No</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Fundraising</value>
        </filters>
        <label>Mike New Users for Fundraising</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mike_New_Users_for_New_GB_RW</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>Locality__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>Worker_Type__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>CRS - One App User</value>
        </filters>
        <label>Mike New Volunteers</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NELondon_New_Users_for_Derbyshire</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>Locality__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>&lt;No</value>
        </filters>
        <filters>
            <field>PASSWORD_EXPIRES</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Locality__c</field>
            <operation>startsWith</operation>
            <value>North East London</value>
        </filters>
        <label>New Users for Locality North East London</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Users_Greater_Manchester_C_West</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>Locality__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>&lt;No</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>PASSWORD_EXPIRES</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Locality__c</field>
            <operation>startsWith</operation>
            <value>Greater Manchester Central &amp; West Locality</value>
        </filters>
        <label>New Users Greater Manchester C &amp; West</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Restrict_Email</fullName>
        <active>true</active>
        <description>Restrict Access to Email</description>
        <errorConditionFormula>ISCHANGED( Email ) &amp;&amp; NOT($Profile.Name   = &quot;System Administrator&quot; || $Profile.Name   = &quot;IT Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Changing User Email is not allowed</errorMessage>
    </validationRules>
</CustomObject>